common-applications/test-environment/mindspore-meetingserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: meetingserver-ingress
  namespace: mindspore-meetingserver
spec:
  rules:
  - host: meetingserver-mindspore.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: meeting-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - meetingserver-mindspore.test.osinfra.cn
    secretName: meetingserver-tls
